--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,51 +120,51 @@ main {
 
 /* Reasons Section */
 #reasons {
-    width: 90%;
-    margin: 20px auto;
+  width: 90%;
+  margin: 20px auto;
 }
 
 #reasons h2 {
-    margin-bottom: 20px;
-    text-align: center;
-    font-size: 280%;
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 280%;
 }
 
-#benefits-physical>div,
-#benefits-mental>div {
-    line-height: 20px;
-    margin-bottom: 20px;
+#benefits-physical > div,
+#benefits-mental > div {
+  line-height: 20px;
+  margin-bottom: 20px;
 }
 
 #benefits p {
-    padding: 0 20px;
+  padding: 0 20px;
 }
 
 hr {
-    border-top: 1px solid #3a3a3a;
-    margin: 5px 0;
+  border-top: 1px solid #3a3a3a;
+  margin: 5px 0;
 }
 
 #circle-cover-bg {
-    background: url("../images/reasons-image.webp");
-    height: 90vw;
-    width: 90vw;
-    margin-bottom: 20px;
-    /* Makes image a circle */
-    border-radius: 50%;
-    max-width: 300px;
-    max-height: 300px;
+  background: url("../images/reasons-image.webp");
+  height: 90vw;
+  width: 90vw;
+  margin-bottom: 20px;
+  /* Makes image a circle */
+  border-radius: 50%;
+  max-width: 300px;
+  max-height: 300px;
 }
 
 #benefits-image {
-    display: flex;
-    align-items: center;
-    justify-content:center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Meet-up Times section */
 #times {
-  background: url('../images/dublin-city.webp') no-repeat center/cover;
+  background: url("../images/dublin-city.webp") no-repeat center/cover;
   /* Handles responsivity without the need for a media query */
   display: flex;
   flex-wrap: wrap;
@@ -172,15 +172,15 @@ hr {
 
 #times div {
   color: #fafafa;
-  background-color: rgba(0, 0, 0, .6);
+  background-color: rgba(0, 0, 0, 0.6);
   padding: 15px;
   text-align: center;
   /* This will not wrap on screens of less than 400px wide.
      Each div will expand to fill the available space on its row */
-     flex-basis: 200px;
-     flex-grow: 1;
-      /* Creates a grid of meetup time divs over the background image */
-      border: 2px solid white;
+  flex-basis: 200px;
+  flex-grow: 1;
+  /* Creates a grid of meetup time divs over the background image */
+  border: 2px solid white;
 }
 
 #times h3 {
@@ -188,6 +188,15 @@ hr {
   color: #fafafa;
 }
 
+/* Gallery page */
+#photos img {
+  width: 100%;
+  line-height: 1em;
+}
+
+#photos {
+  line-height: 0;
+}
 
 /* Footer */
 #social-networks {
@@ -245,7 +254,8 @@ hr {
   }
 
   /* Reasons Section */
-  #benefits-physical, #benefits-mental {
+  #benefits-physical,
+  #benefits-mental {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -262,38 +272,37 @@ hr {
   }
 }
 
-
 /* Large devices (Laptops and Desktops, 992px and up) */
 @media screen and (min-width: 992px) {
   #menu a:hover {
     border-bottom: 1px solid #3a3a3a;
   }
 
-  @media screen and (min-width: 1200px) {    
+  @media screen and (min-width: 1200px) {
     /* Reasons section */
     #benefits {
-        display: flex;
-        flex-direction: row;
+      display: flex;
+      flex-direction: row;
     }
 
     #benefits > div {
-        flex: 1;
+      flex: 1;
     }
 
     #benefits-image {
-        order: 0
+      order: 0;
     }
 
     #benefits-mental {
-        order: 1;
+      order: 1;
     }
 
     #benefits-mental > div {
-        align-self: flex-start;
+      align-self: flex-start;
     }
 
     #benefits-physical > div {
-        align-self: flex-end;
+      align-self: flex-end;
     }
-}
+  }
 }
