Final styling of signup form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,11 +88,9 @@ nav {
 }
 /* Main Content */
 main {
-  /* Enlarge main element to push footer down*/
+  /* Make main element take up any surplus space to push footer down */
   flex: 1 0 auto;
-  /* Add margin at the top to prevent content from being covered by the header */
   margin-top: 47px;
-  /* Enable flex properties for child elements */
   display: flex;
   flex-direction: column;
 }
@@ -112,7 +110,7 @@ main {
   padding: 30px;
 }
 
-#signup-form > h2 {
+#signup-form>h2 {
   color: #fafafa;
   margin-bottom: 20px;
 }
@@ -143,36 +141,23 @@ main {
   color: #fafafa;
 }
 
-/* Media query: tablets and larger (768px and up) */
-@media screen and (min-width: 768px) {
-  /* Form */
-  #signup {
-    background-position: center;
-    position: relative;
-  }
+/* Form */
+#signup {
+  background-position: center;
+  position: relative;
+}
 
-  #signup-form {
-    max-width: 400px;
-    position: absolute;
-    left: 10%;
-    top: 150px;
-  }
-
-  .text-input:hover {
-    border-color: #f16c6b;
-  }
-
-  .join-button:hover {
-    background-color: #fafafa;
-    color: #454b1b;
-  }
+#signup-form {
+  max-width: 400px;
+  left: 10%;
+  top: 150px;
 }
 
 /* Hero Section */
 #hero {
   height: 600px;
   width: 100%;
-  background: url(assets\images\signup-image.webp) no-repeat center center/cover;
+  background: url("../images/hero-image.webp") no-repeat center center/cover;
   position: relative;
 }
 
@@ -291,8 +276,8 @@ hr {
 /* Media query: large or landscape phones (576px and up) */
 @media screen and (min-width: 576px) {
   #photos {
-    column-count: 2;
-    column-gap: 0;
+      column-count: 2;
+      column-gap: 0;
   }
 }
 /* Media query: tablets and larger (760px and up) */
@@ -355,10 +340,12 @@ hr {
   }
 
   /* Gallery */
-  #photos {
-    column-count: 3;
-  }
+#photos {
+  column-count: 3;
 }
+}
+
+
 
 /* Large devices (Laptops and Desktops, 992px and up) */
 @media screen and (min-width: 992px) {
@@ -372,30 +359,32 @@ hr {
   }
 }
 
-@media screen and (min-width: 1200px) {
-  /* Reasons section */
-  #benefits {
-    display: flex;
-    flex-direction: row;
+
+  @media screen and (min-width: 1200px) {
+    /* Reasons section */
+    #benefits {
+      display: flex;
+      flex-direction: row;
+    }
+
+    #benefits > div {
+      flex: 1;
+    }
+
+    #benefits-image {
+      order: 0;
+    }
+
+    #benefits-mental {
+      order: 1;
+    }
+
+    #benefits-mental > div {
+      align-self: flex-start;
+    }
+
+    #benefits-physical > div {
+      align-self: flex-end;
+    }
   }
 
-  #benefits > div {
-    flex: 1;
-  }
-
-  #benefits-image {
-    order: 0;
-  }
-
-  #benefits-mental {
-    order: 1;
-  }
-
-  #benefits-mental > div {
-    align-self: flex-start;
-  }
-
-  #benefits-physical > div {
-    align-self: flex-end;
-  }
-}
